Lots of bug fixes, menu changes and added previous/next buttons to /building