@@ -1,4 +1,4 @@
-package net.ryanland.empire.sys.message.interactions.menu.action;
+package net.ryanland.empire.sys.message.interactions.menu;
 
 import net.dv8tion.jda.api.events.interaction.ButtonClickEvent;
 import net.dv8tion.jda.api.interactions.components.Button;
@@ -6,15 +6,14 @@ import net.ryanland.empire.bot.command.executor.functional_interface.CommandBiCo
 import net.ryanland.empire.bot.command.executor.functional_interface.CommandConsumer;
 import net.ryanland.empire.sys.message.builders.PresetBuilder;
 import net.ryanland.empire.sys.message.interactions.ButtonClickContainer;
-import net.ryanland.empire.sys.message.interactions.menu.InteractionMenuBuilder;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class ActionMenuBuilder implements InteractionMenuBuilder<ActionMenu> {
 
-    private final List<ActionButton> actionButtons = new ArrayList<>(25);
+    private final ActionButtonLayout layout = new ActionButtonLayout();
+    private final List<ActionButton> queuedButtons = new ArrayList<>();
     private PresetBuilder embed;
 
     public ActionMenuBuilder setEmbed(PresetBuilder embed) {
@@ -22,8 +21,8 @@ public class ActionMenuBuilder implements InteractionMenuBuilder<ActionMenu> {
         return this;
     }
 
-    public List<ActionButton> getButtons() {
-        return actionButtons;
+    public ActionButtonLayout getLayout() {
+        return layout;
     }
 
     public PresetBuilder getEmbed() {
@@ -31,7 +30,7 @@ public class ActionMenuBuilder implements InteractionMenuBuilder<ActionMenu> {
     }
 
     public ActionMenuBuilder addButtons(ActionButton... buttons) {
-        this.actionButtons.addAll(Arrays.asList(buttons));
+        queuedButtons.addAll(List.of(buttons));
         return this;
     }
 
@@ -39,18 +38,26 @@ public class ActionMenuBuilder implements InteractionMenuBuilder<ActionMenu> {
         return addButtons(buttons.toArray(new ActionButton[0]));
     }
 
-    public ActionMenuBuilder addButton(ActionButton button) {
-        actionButtons.add(button);
+    public ActionMenuBuilder putQueue() {
+        if (!queuedButtons.isEmpty()) {
+            layout.add(new ActionButtonRow(queuedButtons.toArray(new ActionButton[0])));
+            queuedButtons.clear();
+        }
         return this;
     }
 
-    public ActionMenuBuilder insertButton(int index, ActionButton button) {
-        actionButtons.add(index, button);
+    public ActionMenuBuilder addRows(ActionButtonRow... actionRows) {
+        layout.add(actionRows);
+        return this;
+    }
+
+    public ActionMenuBuilder insertButton(int rowIndex, int buttonIndex, ActionButton button) {
+        layout.get(rowIndex).add(buttonIndex, button);
         return this;
     }
 
     public ActionMenuBuilder addButton(Button button, ButtonClickContainer onClick) {
-        return addButton(new ActionButton(button, onClick));
+        return addButtons(new ActionButton(button, onClick));
     }
 
     public <T> ActionMenuBuilder addButton(Button button, CommandBiConsumer<ButtonClickEvent, Object> onClick, T value) {
@@ -66,22 +73,23 @@ public class ActionMenuBuilder implements InteractionMenuBuilder<ActionMenu> {
         });
     }
 
-    public ActionMenuBuilder insertButton(int index, Button button, ButtonClickContainer onClick) {
-        return insertButton(index, new ActionButton(button, onClick));
+    public ActionMenuBuilder insertButton(int rowIndex, int buttonIndex, Button button, ButtonClickContainer onClick) {
+        return insertButton(rowIndex, buttonIndex, new ActionButton(button, onClick));
     }
 
-    public <T> ActionMenuBuilder insertButton(int index, Button button,
+    public <T> ActionMenuBuilder insertButton(int rowIndex, int buttonIndex, Button button,
                                               CommandBiConsumer<ButtonClickEvent, Object> onClick, T value) {
-        return insertButton(index, button, new ButtonClickContainer(onClick, event -> value));
+        return insertButton(rowIndex, buttonIndex, button, new ButtonClickContainer(onClick, event -> value));
     }
 
-    public ActionMenuBuilder insertButton(int index, Button button, CommandConsumer<ButtonClickEvent> onClick) {
-        return insertButton(index, button, new ButtonClickContainer(onClick));
+    public ActionMenuBuilder insertButton(int rowIndex, int buttonIndex, Button button, CommandConsumer<ButtonClickEvent> onClick) {
+        return insertButton(rowIndex, buttonIndex, button, new ButtonClickContainer(onClick));
     }
 
     @Override
     public ActionMenu build() {
-        return new ActionMenu(actionButtons, embed);
+        putQueue();
+        return new ActionMenu(layout, embed);
     }
 
 }
